Final commit before the 1.1.2 release.
git-svn-id: http://django-reversion.googlecode.com/svn/trunk@204 ab604574-8a94-11dd-aa62-cdabd1f4ca1e

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>reversion</name>
 	<comment></comment>
 	<projects>
+		<project>django-1.0.2</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
